# dining-philosophers

./: CMakeLists.txt  main.cpp
objects/: Chopstick.cpp  Chopstick.h  Philosopher.cpp  Philosopher.h  Waiter.cpp  Waiter.h
